some touchthings are happened, signup pages are created. the lorem ipsum text are replaced by real content

--- a/templates/admin/view_doctor.html
+++ b/templates/admin/view_doctor.html
@@ -1,6 +1,6 @@
 {% extends 'admin/admin_index.html' %}
 {% block body %}
-    <form id="form1" name="form1" method="post" action="/admin_search_doctor">
+    <form id="form1" name="form1" method="post" action="/admin_search_doctor" enctype="multipart/form-data">
         <div class="row">
             <div class="col-md-12 grid-margin stretch-card">
                 <div class="card">
