--- a/templates/doctor/doctor_dashboard.html
+++ b/templates/doctor/doctor_dashboard.html
@@ -91,18 +91,18 @@
                     <a href="/doctor_view_booking" class="card card-light-blue card-link">
 
                         <div class="card-body">
-                                <lottie-player src="https://assets10.lottiefiles.com/packages/lf20_7vph1npx.json"
-                                               background="transparent" speed="1" style="width: 200px; height: 200px;"
-                                               loop autoplay></lottie-player>
-                                <p class="mb-4">view BOOKINGS</p>
-                                <p class="fs-30 mb-2">{{ booking }}</p>
+                            <lottie-player src="https://assets10.lottiefiles.com/packages/lf20_7vph1npx.json"
+                                           background="transparent" speed="1" style="width: 200px; height: 200px;"
+                                           loop autoplay></lottie-player>
+                            <p class="mb-4">view BOOKINGS</p>
+                            <p class="fs-30 mb-2">{{ booking }}</p>
                         </div>
                     </a>
                 </div>
             </div>
 
             <!-- ================ END OF FIRST ROW ================ -->
-        <div  id="about"></div>
+            <div id="about"></div>
         </div>
 
         <!-- ================ END OF PENDING LINKS ================ -->
@@ -117,20 +117,20 @@
     <div class="row" style="padding: 0px .9rem;">
         <div class="card card-border card-hover-effect">
             <div class="card-body">
-{#                <div class="contact-t">#}
+                {#                <div class="contact-t">#}
                 <h3 class="card-title">About</h3>
                 <div class="card-description">
                     <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                        been the industry's standard dummy text ever since the 1500s, when an unknown printer took
-                        a galley of type and scrambled it to make a type specimen book. It has survived not only
-                        five centuries, but also the leap into electronic typesetting, remaining essentially
-                        unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
-                        Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
-                        PageMaker including versions of Lorem Ipsum
+                        <b>Medicare</b> is a web-application which customers can order their medicine by
+                        uploading the picture of prescription and get the home delivery of medicine by cash on
+                        delivery. Medicare solves the problem for people who lives in remote areas. The people
+                        will get the service available at any time the customer can order their medicines in 2
+                        ways: By uploading the picture of prescription and By searching for a medicine. Our aim
+                        is to provide medicine to patients at the doorstep and aware customers for online
+                        medicine availability.
                     </p>
                 </div>
-{#                </div>#}
+                {#                </div>#}
             </div>
         </div>
     </div>
@@ -138,20 +138,20 @@
 
     <!-- ================ END OF SECOND BLOCK - ABOUT ================ -->
 
-    <!-- ================ THIRD BLOCK - DOCTOR TIPS ================ -->
-
-    <div class="row" style="padding: 0px .9rem;">
-{#    <div class="container">#}
-        <div class="card">
-            <div class="card-body">
-                <h3 class="card-title">Daily Tips</h3>
-            </div>
-        </div>
-{#    </div>#}
-    </div>
-    <br>
-
-    <!-- ================ END OF THIRD BLOCK - DOCTOR TIPS ================ -->
+    {#    <!-- ================ THIRD BLOCK - DOCTOR TIPS ================ -->#}
+    {##}
+    {#    <div class="row" style="padding: 0px .9rem;">#}
+    {#    <div class="container">#}
+    {#        <div class="card">#}
+    {#            <div class="card-body">#}
+    {#                <h3 class="card-title">Daily Tips</h3>#}
+    {#            </div>#}
+    {#        </div>#}
+    {#    </div>#}
+    {#    </div>#}
+    {#    <br>#}
+    {##}
+    {#    <!-- ================ END OF THIRD BLOCK - DOCTOR TIPS ================ -->#}
 
     <!-- ================ FOURTH BLOCK - CONATCT US ================ -->
 
@@ -161,28 +161,26 @@
                 <section class="contact-t">
                     <div class="content-t">
                         <h2>Contact Us</h2>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a
-                            page when looking at its layout. The point of using Lorem Ipsum is that it has a
-                            more-or-less normal distribution of letters, as opposed to using 'Content here, content
-                            here', making it look like readable English. Many desktop publishing packages and web page
-                            editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will
-                            uncover many web sites still in their infancy. Various versions have evolved over the years,
-                            sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+                        <p>It is so happy to know that you are using this website. Please connect with us our crew is
+                            always ready to find a good path for you. Enter your email address and get in touch with
+                            us!</p>
                     </div>
                     <div class="container-t">
                         <div class="contactInfo-t">
                             <div class="box-t">
-                                <div class="icon-t"><i class="fa-solid fa-location-dot fa-shake" style="--fa-animation-duration: 5s;"></i></div>
+                                <div class="icon-t"><i class="fa-solid fa-location-dot fa-shake"
+                                                       style="--fa-animation-duration: 5s;"></i></div>
                                 <div class="text-t">
                                     <h3>Address</h3>
                                     <p>Lal Bahadur Shastri<br>
-                                    Model Degree College<br>
-                                    Parappanangadi, Malappuram</p>
+                                        Model Degree College<br>
+                                        Parappanangadi, Malappuram</p>
                                 </div>
                             </div>
 
                             <div class="box-t">
-                                <div class="icon-t"><i class="fa-solid fa-phone fa-shake" style="--fa-animation-duration: 5s;"></i></div>
+                                <div class="icon-t"><i class="fa-solid fa-phone fa-shake"
+                                                       style="--fa-animation-duration: 5s;"></i></div>
                                 <div class="text-t">
                                     <h3>Phone</h3>
                                     <p>+91-3465-4875-12</p>
@@ -190,7 +188,8 @@
                             </div>
 
                             <div class="box-t">
-                                <div class="icon-t"><i class="fa-solid fa-envelope fa-shake" style="--fa-animation-duration: 5s;"></i></div>
+                                <div class="icon-t"><i class="fa-solid fa-envelope fa-shake"
+                                                       style="--fa-animation-duration: 5s;"></i></div>
                                 <div class="text-t">
                                     <h3>Email</h3>
                                     <p>rtda@gmail.com</p>
@@ -240,18 +239,18 @@
             <div class="card">
                 <div class="card-body">
                     <h1 class="card-title">Medicare</h1>
-{#                    <div><lottie-player src="https://assets7.lottiefiles.com/packages/lf20_cdu97cbh.json"#}
-{#                                   background="transparent"  speed="1"  style="width: 700px; height: 150px;"  loop#}
-{#                                   autoplay></lottie-player>#}
-{#                    </div>#}
+                    {#                    <div><lottie-player src="https://assets7.lottiefiles.com/packages/lf20_cdu97cbh.json"#}
+                    {#                                   background="transparent"  speed="1"  style="width: 700px; height: 150px;"  loop#}
+                    {#                                   autoplay></lottie-player>#}
+                    {#                    </div>#}
                     <div class="card-description">
-                        <h5 style="color: #cfcfcf">Online Consultancy & Medicine Purchase</h5>
-                        <p style="color: #a1a1a1">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the industry's standard dummy text ever since the 1500s, when an unknown printer took
-                            a galley of type and scrambled it to make a type specimen book.
+                        <h5 style="color: #cfcfcf">Online Consultancy & Medicine Purchase</h5><br>
+                        <p style="color: #a1a1a1">Medicare is a web-application which customers can order their medicine
+                            by
+                            uploading the picture of prescription and get the home delivery of medicine by cash on
+                            delivery. Medicare solves the problem for people who lives in remote areas.
                         </p>
-{#                        <a href="/login_d">Login</a>#}
+                        {#                        <a href="/login_d">Login</a>#}
                     </div>
                 </div>
             </div>
@@ -263,7 +262,8 @@
                     <div class="card-description">
                         <ul class="nav">
                             <li class="nav-item nav"><a href="#about" class="nav-link link-ppty">About</a></li>
-                            <li class="nav-item nav"><a href="#contact-link" class="nav-link link-ppty">Contact Us</a></li>
+                            <li class="nav-item nav"><a href="#contact-link" class="nav-link link-ppty">Contact Us</a>
+                            </li>
                             <li class="nav-item nav"><a href="##" class="nav-link link-ppty">Privacy Policy</a></li>
                         </ul>
                     </div>
@@ -277,16 +277,20 @@
                     <div class="template-demo block">
                         <ul>
                             <li class="nav-item nav"><a href="##" class="nav-link link-ppty-brands"><i
-                                    class="fa-brands fa-facebook fa-shake fa-xl" style="--fa-animation-duration: 5s;"></i>Facebook</a></li>
+                                    class="fa-brands fa-facebook fa-shake fa-xl"
+                                    style="--fa-animation-duration: 5s;"></i>Facebook</a></li>
 
                             <li class="nav-item nav"><a href="##" class="nav-link link-ppty-brands"><i
-                                    class="fa-brands fa-instagram fa-shake fa-xl" style="--fa-animation-duration: 5s;"></i>Instagram</a></li>
+                                    class="fa-brands fa-instagram fa-shake fa-xl"
+                                    style="--fa-animation-duration: 5s;"></i>Instagram</a></li>
 
                             <li class="nav-item nav"><a href="##" class="nav-link link-ppty-brands"><i
-                                    class="fa-brands fa-twitter fa-shake fa-xl" style="--fa-animation-duration: 5s;"></i>Twitter</a></li>
+                                    class="fa-brands fa-twitter fa-shake fa-xl"
+                                    style="--fa-animation-duration: 5s;"></i>Twitter</a></li>
 
                             <li class="nav-item nav"><a href="##" class="nav-link link-ppty-brands"><i
-                                    class="fa-brands fa-linkedin fa-shake fa-xl" style="--fa-animation-duration: 5s;"></i>Linkedin</a></li>
+                                    class="fa-brands fa-linkedin fa-shake fa-xl"
+                                    style="--fa-animation-duration: 5s;"></i>Linkedin</a></li>
                         </ul>
                     </div>
                 </div>
