--- a/templates/hospital/add_doctor_profile.html
+++ b/templates/hospital/add_doctor_profile.html
@@ -4,8 +4,8 @@
     <div class="row">
         <div class="col-md-12 grid-margin stretch-card">
             <div class="card">
-                <div class="card-body">
-                    <h3>Wanna edit image section, select section</h3><br><br>
+                <div class="card-body"><br>
+                    <h3>Update Your Doctor details</h3><br> <br>
                     <form action="hospital_add_doctors_post" method="post" enctype="multipart/form-data" name="form1">
                         <div class="col-12">
                             <div class="form-group row">
@@ -15,22 +15,14 @@
                                            placeholder="Enter Name" required>
                                 </div>
                             </div>
-{#                            <div class="form-group row">#}
-{#                                <label class="col-sm-3 col-form-label">File upload</label>#}
-{#                                <input type="file" name="img" id="img" class="file-upload-default">#}
-{#                                <div class="input-group col-xs-12 col-sm-9">#}
-{#                                    <input type="text" class="form-control file-upload-info" disabled=""#}
-{#                                           placeholder="Upload Image">#}
-{#                                    <span class="input-group-append">#}
-{#                                                      <button class="file-upload-browse btn btn-primary" type="button">Upload</button>#}
-{#                                                    </span>#}
-{#                                </div>#}
-{#                            </div>#}
 
-{#                            <tr>#}
-{#                                <th>Image</th>#}
-{#                                <td><input type="file" name="img" id="img"></td>#}
-{#                            </tr>#}
+                            <div class="form-group row">
+                                <label for="" class="col-sm-3 col-form-label">Image</label>
+                                <div class="col-sm-9">
+                                    <input type="file" name="img" id="img" class="form-control" required>
+                                </div>
+                            </div>
+
                             <div class="form-group row">
                                 <label for="" class="col-sm-3 col-form-label">Address</label>
                                 <div class="col-sm-9">
@@ -46,33 +38,27 @@
                                 </div>
                             </div>
 
-{#                        <div class="form-group row">#}
-{#                            <label for="" class="col-sm-3 col-form-label">District</label>#}
-{#                            <div class="col-sm-9">#}
-{#                                <input type="date" name="dob" id="dob" class="form-control"#}
-{#                                       placeholder="Enter Address">#}
-{#                            </div>#}
-{#                        </div>#}
-
-{#                        <tr>#}
-{#                            <th>District</th>#}
-{#                            <td><select name="district" id="district">#}
-{#                            <option>Alappuzha</option>#}
-{#                            <option>Ernakulam</option>#}
-{#                            <option>Idukki</option>#}
-{#                            <option>Kannur</option>#}
-{#                            <option>Kasaragod</option>#}
-{#                            <option>Kollam</option>#}
-{#                            <option>Kottayam</option>#}
-{#                            <option>Kozhikode</option>#}
-{#                            <option>Malappuram</option>#}
-{#                            <option>Palakkad</option>#}
-{#                            <option>Pathanamthitta</option>#}
-{#                            <option>Thiruvananthapuram</option>#}
-{#                            <option>Thrissur</option>#}
-{#                            <option>Wayanad</option>#}
-{#                            </select></td>#}
-{#                        </tr>#}
+                            <div class="form-group row">
+                                <label for="" class="col-sm-3 col-form-label">District</label>
+                                <div class="col-sm-9">
+                                    <select name="district" id="district" class="form-control">
+                                        <option>Alappuzha</option>
+                                        <option>Ernakulam</option>
+                                        <option>Idukki</option>
+                                        <option>Kannur</option>
+                                        <option>Kasaragod</option>
+                                        <option>Kollam</option>
+                                        <option>Kottayam</option>
+                                        <option>Kozhikode</option>
+                                        <option>Malappuram</option>
+                                        <option>Palakkad</option>
+                                        <option>Pathanamthitta</option>
+                                        <option>Thiruvananthapuram</option>
+                                        <option>Thrissur</option>
+                                        <option>Wayanad</option>
+                                    </select>
+                                </div>
+                            </div>
 
                             <div class="form-group row">
                                 <label for="" class="col-sm-3 col-form-label">Place</label>
@@ -145,7 +131,8 @@
                                            placeholder="Enter Fees" required>
                                 </div>
                             </div>
-                            <input type="submit" name="update" id="update" value="Submit" class="btn btn-primary">
+                            <input type="submit" name="update" id="update" value="Submit"
+                                   class="btn btn-block btn-primary">
 
                         </div>
                     </form>
