--- a/templates/pharmacy/add_medicine.html
+++ b/templates/pharmacy/add_medicine.html
@@ -6,7 +6,7 @@
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">Add Medicine</h4>
-                <form id="form1" name="form1" method="post" action="/pharmacy_add_medicine_post">
+                <form id="form1" name="form1" method="post" action="/pharmacy_add_medicine_post" enctype="multipart/form-data">
                     <div class="form-group row">
                         <label for="" class="col-sm-3 col-form-label">Name</label>
                         <div class="col-sm-9">
