--- a/templates/pharmacy/pharmacy_dashboard.html
+++ b/templates/pharmacy/pharmacy_dashboard.html
@@ -59,7 +59,7 @@
                                            background="transparent" speed="1" style="width: 225px; height: 225px;" loop
                                            autoplay></lottie-player>
                             <p class="mb-4">View BOOKINGS</p>
-                            <p class="fs-30 mb-2">2</p>
+                            <p class="fs-30 mb-2">{{ book }}</p>
                         </div>
                     </a>
                 </div>
@@ -73,7 +73,7 @@
                                            background="transparent" speed="1" style="width: 200px; height: 200px;" loop
                                            autoplay></lottie-player>
                             <p class="mb-4">View MEDICINES</p>
-                            <p class="fs-30 mb-2">4</p>
+                            <p class="fs-30 mb-2">{{ med }}</p>
                         </div>
                     </a>
                 </div>
@@ -96,13 +96,13 @@
                     <h3 class="card-title">About</h3>
                     <div class="card-description">
                         <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the industry's standard dummy text ever since the 1500s, when an unknown printer took
-                            a galley of type and scrambled it to make a type specimen book. It has survived not only
-                            five centuries, but also the leap into electronic typesetting, remaining essentially
-                            unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
-                            Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
-                            PageMaker including versions of Lorem Ipsum
+                            <b>Medicare</b> is a web-application which customers can order their medicine by
+                        uploading the picture of prescription and get the home delivery of medicine by cash on
+                        delivery. Medicare solves the problem for people who lives in remote areas. The people
+                        will get the service available at any time the customer can order their medicines in 2
+                        ways: By uploading the picture of prescription and By searching for a medicine. Our aim
+                        is to provide medicine to patients at the doorstep and aware customers for online
+                        medicine availability.
                         </p>
                     </div>
                     {#                </div>#}
@@ -122,17 +122,9 @@
                     <section class="contact-t">
                         <div class="content-t">
                             <h2>Contact Us</h2>
-                            <p>It is a long established fact that a reader will be distracted by the readable content of
-                                a
-                                page when looking at its layout. The point of using Lorem Ipsum is that it has a
-                                more-or-less normal distribution of letters, as opposed to using 'Content here, content
-                                here', making it look like readable English. Many desktop publishing packages and web
-                                page
-                                editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum'
-                                will
-                                uncover many web sites still in their infancy. Various versions have evolved over the
-                                years,
-                                sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+                        <p>It is so happy to know that you are using this website. Please connect with us our crew is
+                            always ready to find a good path for you. Enter your email address and get in touch with
+                            us!</p>
                         </div>
                         <div class="container-t">
                             <div class="contactInfo-t">
@@ -213,14 +205,12 @@
                         {#                                   autoplay></lottie-player>#}
                         {#                    </div>#}
                         <div class="card-description">
-                            <h5 style="color: #cfcfcf">Online Consultancy & Medicine Purchase</h5>
-                            <p style="color: #a1a1a1">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                                has
-                                been the industry's standard dummy text ever since the 1500s, when an unknown printer
-                                took
-                                a galley of type and scrambled it to make a type specimen book.
-                            </p>
+                            <h5 style="color: #cfcfcf">Online Consultancy & Medicine Purchase</h5><br>
+                        <p style="color: #a1a1a1">Medicare is a web-application which customers can order their medicine
+                            by
+                            uploading the picture of prescription and get the home delivery of medicine by cash on
+                            delivery. Medicare solves the problem for people who lives in remote areas.
+                        </p>
                             {#                        <a href="/login_d">Login</a>#}
                         </div>
                     </div>
