--- a/static/asset/css/vertical-layout-light/style.css
+++ b/static/asset/css/vertical-layout-light/style.css
@@ -23542,7 +23542,7 @@ code {
 .jsgrid .jsgrid-table .jsgrid-filter-row select, .jsgrid .jsgrid-table .jsgrid-filter-row input[type=number], .select2-container--default .select2-selection--single, .select2-container--default .select2-selection--single .select2-search__field, .typeahead,
 .tt-query,
 .tt-hint {
-    border: 1px solid #495057;
+    border: 1px solid #c9c8c8;
     font-weight: 400;
     font-size: 0.9rem;
     border-radius: 4px;
@@ -23559,7 +23559,7 @@ select.tt-query,
 select.tt-hint {
     padding: .4375rem .75rem;
     border: 0;
-    outline: 1px solid #CED4DA;
+    outline: 1px solid #c9c8c8;
     color: #c9c8c8;
 }
 
@@ -29347,7 +29347,7 @@ div.tagsinput span.tag a {
 .auth form .form-group .jsgrid .jsgrid-table .jsgrid-filter-row select, .jsgrid .jsgrid-table .jsgrid-filter-row .auth form .form-group select, .auth form .form-group .jsgrid .jsgrid-table .jsgrid-filter-row input[type=number], .jsgrid .jsgrid-table .jsgrid-filter-row .auth form .form-group input[type=number], .auth form .form-group .select2-container--default .select2-selection--single, .select2-container--default .auth form .form-group .select2-selection--single, .auth form .form-group .select2-container--default .select2-selection--single .select2-search__field, .select2-container--default .select2-selection--single .auth form .form-group .select2-search__field, .auth form .form-group .typeahead,
 .auth form .form-group .tt-query,
 .auth form .form-group .tt-hint {
-    background: transparent;
+    background: 1;
     border-radius: 0;
     font-size: .9375rem;
 }
