--- a/templates/admin/admin_dashboard.html
+++ b/templates/admin/admin_dashboard.html
@@ -1,7 +1,7 @@
 {% extends 'admin/admin_index.html' %}
 {% block body %}
 
-<!-- HEADING -->
+    <!-- HEADING -->
 
     <div class="col-md-12 grid-margin">
         <div class="row">
@@ -10,31 +10,31 @@
                 <h4 class="font-weight-normal mb-0 secondary-text">Online Consultancy & Medicine Purchase</h4>
             </div>
             <div class="col-12 col-xl-4">
-{#                <div class="justify-content-end d-flex">#}
-{#                    <div class="dropdown flex-md-grow-1 flex-xl-grow-0">#}
-{#                        <button class="btn btn-sm btn-light bg-white dropdown-toggle" type="button"#}
-{#                                id="dropdownMenuDate2" data-toggle="dropdown" aria-haspopup="true"#}
-{#                                aria-expanded="true">#}
-{#                            <i class="mdi mdi-calendar"></i> Today (10 Jan 2021)#}
-{#                        </button>#}
-{#                        <div class="dropdown-menu dropdown-menu-right"#}
-{#                             aria-labelledby="dropdownMenuDate2">#}
-{#                            <a class="dropdown-item" href="#">January - March</a>#}
-{#                            <a class="dropdown-item" href="#">March - June</a>#}
-{#                            <a class="dropdown-item" href="#">June - August</a>#}
-{#                            <a class="dropdown-item" href="#">August - November</a>#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
+                {#                <div class="justify-content-end d-flex">#}
+                {#                    <div class="dropdown flex-md-grow-1 flex-xl-grow-0">#}
+                {#                        <button class="btn btn-sm btn-light bg-white dropdown-toggle" type="button"#}
+                {#                                id="dropdownMenuDate2" data-toggle="dropdown" aria-haspopup="true"#}
+                {#                                aria-expanded="true">#}
+                {#                            <i class="mdi mdi-calendar"></i> Today (10 Jan 2021)#}
+                {#                        </button>#}
+                {#                        <div class="dropdown-menu dropdown-menu-right"#}
+                {#                             aria-labelledby="dropdownMenuDate2">#}
+                {#                            <a class="dropdown-item" href="#">January - March</a>#}
+                {#                            <a class="dropdown-item" href="#">March - June</a>#}
+                {#                            <a class="dropdown-item" href="#">June - August</a>#}
+                {#                            <a class="dropdown-item" href="#">August - November</a>#}
+                {#                        </div>#}
+                {#                    </div>#}
+                {#                </div>#}
             </div>
         </div>
     </div>
 
-<!-- ================ END OF HEADING ================ -->
+    <!-- ================ END OF HEADING ================ -->
 
     <div class="row">
 
-<!-- ================ BENJAMIN QUOTE ================ -->
+        <!-- ================ BENJAMIN QUOTE ================ -->
 
         <div class="col-md-6 grid-margin stretch-card">
             <div class="card tale-bg">
@@ -42,9 +42,9 @@
                     <img src="/static/asset/images/dashboard/people.svg" alt="people">
                     <div class="weather-info">
                         <div class="d-flex">
-{#                            <div>#}
-{#                                <h2 class="mb-0 font-weight-normal"><i class="icon-sun mr-2"></i></h2>#}
-{#                            </div>#}
+                            {#                            <div>#}
+                            {#                                <h2 class="mb-0 font-weight-normal"><i class="icon-sun mr-2"></i></h2>#}
+                            {#                            </div>#}
                             <div class="ml-2" align="right">
                                 <h4 class="location font-weight-normal" style="color: #4747A1;">Early to Bed and Early
                                     to Rise, <br>Makes a man Healthy, Wealthy and Wise</h4>
@@ -58,9 +58,9 @@
             </div>
         </div>
 
-<!-- ================ END OF QUOTE ================ -->
+        <!-- ================ END OF QUOTE ================ -->
 
-<!-- ================ PENDING LINKS ================ -->
+        <!-- ================ PENDING LINKS ================ -->
 
 
         <div class="col-md-6 grid-margin transparent">
@@ -94,7 +94,7 @@
                 </div>
             </div>
 
-             <!-- ================ END OF FIRST ROW ================ -->
+            <!-- ================ END OF FIRST ROW ================ -->
 
             <!-- ================ SECOND ROW ================ -->
 
@@ -106,10 +106,10 @@
 
                     <a href="/view_doctor" class="card card-tale card-light-danger card-link">
                         <div class="card-body">
-{#                            <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_ibbakwps.json"  background="transparent"  speed="1"  style="width: 300px; height: 200px;"  loop  autoplay></lottie-player>#}
-{#                            <div class="justify-content-center">#}
-{#                            <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_5rkxam89.json" background="transparent" speed="1" style="width: 300px; height: 150px;" loop autoplay></lottie-player>#}
-{#                            </div>#}
+                            {#                            <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_ibbakwps.json"  background="transparent"  speed="1"  style="width: 300px; height: 200px;"  loop  autoplay></lottie-player>#}
+                            {#                            <div class="justify-content-center">#}
+                            {#                            <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_5rkxam89.json" background="transparent" speed="1" style="width: 300px; height: 150px;" loop autoplay></lottie-player>#}
+                            {#                            </div>#}
                             <p class="mb-4">Pending DOCTORS</p>
                             <p class="fs-30 mb-2">{{ doc }}</p>
                             <p>Approve</p>
@@ -134,38 +134,36 @@
 
         </div>
 
-<!-- ================ END OF PENDING LINKS ================ -->
+        <!-- ================ END OF PENDING LINKS ================ -->
 
 
-    <!-- ================ SECOND BLOCK - ABOUT ================ -->
+        <!-- ================ SECOND BLOCK - ABOUT ================ -->
 
-    <div class="row" style="padding: 0px 1.8rem;">
-        <div class="card card-border card-hover-effect">
-            <div class="card-body">
-                <h3 class="card-title"><a id="about">About</a></h3>
-                <div class="card-description">
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                        been the industry's standard dummy text ever since the 1500s, when an unknown printer took
-                        a galley of type and scrambled it to make a type specimen book. It has survived not only
-                        five centuries, but also the leap into electronic typesetting, remaining essentially
-                        unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
-                        Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
-                        PageMaker including versions of Lorem Ipsum
-                    </p>
+        <div class="row" style="padding: 0px 1.8rem;">
+            <div class="card card-border card-hover-effect">
+                <div class="card-body">
+                    <h3 class="card-title"><a id="about">About</a></h3>
+                    <div class="card-description">
+                        <p>
+                            <b>Medicare</b> is a web-application which customers can order their medicine by
+                            uploading the picture of prescription and get the home delivery of medicine by cash on
+                            delivery. Medicare solves the problem for people who lives in remote areas. The people
+                            will get the service available at any time the customer can order their medicines in 2
+                            ways: By uploading the picture of prescription and By searching for a medicine. Our aim
+                            is to provide medicine to patients at the doorstep and aware customers for online
+                            medicine availability.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <br>
+        <br>
 
-    <!-- ================ END OF SECOND BLOCK - ABOUT ================ -->
-
-
+        <!-- ================ END OF SECOND BLOCK - ABOUT ================ -->
 
 
     </div>
-{#    <lottie-player src="https://assets9.lottiefiles.com/datafiles/MUp3wlMDGtoK5FK/data.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;" loop autoplay></lottie-player>#}
+    {#    <lottie-player src="https://assets9.lottiefiles.com/datafiles/MUp3wlMDGtoK5FK/data.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;" loop autoplay></lottie-player>#}
 
 
 {% endblock %}
